# dirtybase

./: Cargo.toml  LICENSE  env.example
lib/dirtybase_db/: Cargo.toml
lib/dirtybase_db/src/: base.rs  lib.rs
lib/dirtybase_db/src/base/: join_builder.rs  query.rs  query_conditions.rs  query_join_types.rs  query_operators.rs  query_values.rs  schema.rs  user_table.rs  where_join_operators.rs
lib/dirtybase_db/src/driver/: mysql.rs
lib/dirtybase_db/src/driver/mysql/: commit_table.rs  mysql_schema_manager.rs
lib/dirtybase_orm/: Cargo.toml
lib/dirtybase_orm/src/: base.rs
lib/dirtybase_orm/src/base/: column.rs  manager.rs  query.rs  query_values.rs  save.rs  schema.rs  table.rs  user_table.rs
lib/dirtybase_orm/src/driver/mysql/: mysql_schema_manager.rs
