[package]
name = "dirtybase_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
futures = "0.3.26"
futures-util = "0.3.26"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "sqlite", "any", "chrono", "json"] }
ulid = { version = "1.0.0", features = ["serde", "rand", "std"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
